plugins {
    id 'java'
}

group = 'com.wikia.tibia'
version = '1.1.0'
description = 'TibiaWikiBot'

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation 'org.slf4j:slf4j-api:1.8.0-beta4'
    implementation 'org.slf4j:slf4j-simple:1.8.0-beta4'
    implementation 'org.json:json:20190722'
    implementation 'one.util:streamex:0.7.2'
    implementation 'commons-io:commons-io:2.6'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.11.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.0'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.11.0'
    implementation 'org.skyscreamer:jsonassert:1.5.0'
    implementation 'com.google.guava:guava:29.0-jre'
    implementation 'io.vavr:vavr:0.10.2'
    testImplementation 'junit:junit:4.13'
    testImplementation 'org.mockito:mockito-core:3.3.3'
    testImplementation 'org.hamcrest:hamcrest-core:2.2'
    testImplementation 'org.hamcrest:hamcrest-library:2.2'
    annotationProcessor 'org.projectlombok:lombok:1.18.12'
    compileOnly 'org.projectlombok:lombok:1.18.12'
}

sourceCompatibility = 14

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs += '--enable-preview'
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}